# python_C_test

./: README.md
stats_cpython_test/: CMakeLists.txt  main.cpp
test_1/: build.sh  test_1.c
test_2/: build.sh  run.sh  test_func.cpp
test_3/: build.sh  main.cpp
test_4/: CMakeLists.txt  main.cpp
test_5/: build.sh  test_func.cpp
test_5/scripts/test/: func.py
test_6/: CMakeLists.txt  test_func.cpp
test_6/scripts/test/: func.py
test_class/: CMakeLists.txt  main.cpp  test_PyArg_ParseTuple.cpp
test_class/scripts/: test_class.py
